# kar-reversi-minmax

./: Cargo.toml  README.md  justfile
docs/: index.html  kar_reversi_minmax.d.ts  kar_reversi_minmax.js  kar_reversi_minmax_bg.wasm.d.ts
src/: bevy_highlight_constants.rs  bevy_interactions.rs  bevy_menu_interactions.rs  bevy_pieces.rs  bevy_scene.rs  bevy_scenes.rs  bevy_structs.rs  bevy_systems.rs  bevy_utils.rs  board.rs  bot.rs  bot_algorithm.rs  bot_difficulty.rs  bot_heuristic.rs  constants.rs  game.rs  history.rs  lib.rs  main.rs  player.rs  reversi.rs  utils.rs
src/game/: game.rs  game_mode.rs  game_state.rs  highlight_constants.rs  interactions.rs  menu_interactions.rs  mod.rs  pieces.rs  scenes.rs  structs.rs
