[package]
name = "kar_reversi_minmax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", optional = true }
# bevy = { version = "0.12.0", features = ["dynamic_linking"], optional = true }
bevy_mod_picking = { version = "0.17.0", optional = true }
strum = { version = "0.25.0", features = ["derive"] }
tabled = { version = "0.14.0", optional = true }
text_io = { version = "0.1.12", optional = true }

[features]
default = ["terminal"]
terminal = ["dep:tabled", "dep:text_io"]
game = ["dep:bevy", "dep:bevy_mod_picking"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Moderate optimization in release
[profile.release]
opt-level = 2

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
