[package]
name = "kar_reversi_minmax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
bevy = { version = "0.12.0", optional = true }
bevy_mod_picking = { version = "0.17.0", optional = true, default-features = false, features = [
    "debug",
    "bevy_picking_highlight",
    "highlight",
    "bevy_picking_raycast",
    "backend_raycast",
] }
futures = "0.3.29"
if_chain = "1.0.2"
strum = { version = "0.25.0", features = ["derive"] }
tabled = { version = "0.14.0", optional = true }
text_io = { version = "0.1.12", optional = true }
tokio = "1.34.0"

[features]
default = ["terminal"]
terminal = ["dep:tabled", "dep:text_io"]
game = ["dep:bevy", "dep:bevy_mod_picking"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Moderate optimization in release
[profile.release]
opt-level = 2

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
